Update project to netlify

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "parallel-expression-calculation",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
